updated html added links to the footer

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Kawaii Weather App</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <h2>Let's do this thang!</h2>
-    <footer>Built by Victoria Garcia</footer>
+    <h1>Hello World :)</h1>
+    <h2>Kawaii weather widget in progress ... 🌸</h2>
+    <footer>
+      Created by <a href="https://github.com/fifth-monger">Victoria Garcia</a>
+      • Code on
+      <a href="https://github.com/fifth-monger/kawaii-weather-widget">GitHub</a>
+      • Hosted by <a href="https://kawaiiweather.netlify.app/">Netlify</a>.
+    </footer>
   </body>
 </html>
