--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <title>Kawaii Weather App</title>
   </head>
   <body>
-    <h1>Hello World :)</h1>
-    <h2>Kawaii weather widget in progress ... 🌸</h2>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Austin</h1>
+        <p>
+          Wednesday 06:30, sunny
+          <br />
+          Humidity: 24%, Wind: 2m/h
+        </p>
+      </div>
+      <div>🌞 95℉</div>
+    </main>
+
     <footer>
+      <em>Kawaii weather widget in progress</em> ... 🌸
+      <br />
       Created by <a href="https://github.com/fifth-monger">Victoria Garcia</a>
-      • Code on
+      • Open-sourced on
       <a href="https://github.com/fifth-monger/kawaii-weather-widget">GitHub</a>
       • Hosted by <a href="https://kawaiiweather.netlify.app/">Netlify</a>.
     </footer>
