updated some colors

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Humidity: 24%, Wind: 2m/h
           </p>
         </div>
-        <div>🌞 95℉</div>
+        <div>🌞 95°F</div>
       </main>
       <br />
       <footer>
