updated the css to main temp display

--- a/index.html
+++ b/index.html
@@ -26,17 +26,22 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Austin</h1>
-          <p>
-            Wednesday 06:30, sunny
-            <br />
-            Humidity: 24%, Wind: 2m/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Austin</h1>
+            <p class="weather-app-details">
+              Wednesday 06:30, sunny
+              <br />
+              Humidity: <strong>24% </strong>, Wind: <strong>2m/h</strong>
+            </p>
+          </div>
+          <div class="large-temperature-display">
+            <span class="temp-emoji">☀</span>
+            <span class="temp-main">95</span>
+            <span class="temp-unit">°F</span>
+          </div>
         </div>
-        <div>🌞 95°F</div>
       </main>
-      <br />
       <footer>
         <em>Kawaii weather widget in progress</em> ... 🌸
         <br />
