yeah i decided to make a new class and target the whole class so it doesn't wrap on the phone

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             <p class="weather-app-details">
               Wednesday 06:30, sunny
               <br />
-              Humidity: <strong>24% </strong>, Wind: <strong>2m/h</strong>
+              <span class="weather-conditions"
+                >Humidity: <strong>24% </strong>, Wind:
+                <strong>2m/h</strong></span
+              >
             </p>
           </div>
           <div class="large-temperature-display">
